# family-site-api

./: .gitignore  Cargo.toml
config/: dev.example.yaml  dev.yaml  example.yaml
sql/: account.sql  article.sql  behavior.sql  comment.sql  diet.sql  draft.sql  health.sql  journal.sql  remark.sql  wish.sql
src/: error.rs  main.rs  prelude.rs
src/api/: account.rs
src/api/account/: handler.rs  model.rs
src/biz/: base_comm.rs  courier.rs  internal.rs  mod.rs
src/biz/account/: communicator.rs  courier.rs  handler.rs  mod.rs  model.rs  recorder.rs
src/biz/ai/: handler.rs
src/biz/article/: courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/article_category/: handler.rs  mod.rs  recorder.rs
src/biz/behavior/: courier.rs  handler.rs  recorder.rs
src/biz/diet/: courier.rs  handler.rs  recorder.rs
src/biz/draft/: courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/file/: handler.rs
src/biz/health/: courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/journal/: courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/remark/: courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/user/: communicaotr.rs  communicator.rs  courier.rs  handler.rs  mod.rs  recorder.rs
src/biz/wish/: courier.rs  handler.rs  mod.rs  recorder.rs
src/dao/sql/: account.sql
src/infra/: config.rs  error.rs  init.rs  mod.rs
src/infra/error/: biz.rs  error.rs  infra.rs  infra_err.rs  mod.rs
src/infra/middleware/: jwt.rs
src/setup/: setup.rs
