[package]
name = "family-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.200"
dotenv = "0.15.0"
deadpool-postgres = { version = "0.13.0", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
derive_more = "0.99.17"