[package]
name = "ham-fam-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.7.0"
serde = "1.0.200"
dotenv = "0.15.0"
deadpool-postgres = { version = "0.13.0", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
derive_more = "0.99.17"
futures-util = "0.3.30"
jsonwebtoken = "9"
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.15.1"
actix-files = "0.6.5"
futures = "0.3.30"
actix-multipart = "0.6.1"
sanitize-filename = "0.5.0"
async-trait = "0.1.80"
base64 = "0.22.1"
openssl = { version = "0.10.64", features = ["vendored"] }
serde-querystring-actix = "0.2.0"
reqwest = { version = "0.12.4", features = ["json"] }
